[package]
name = "lenar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "./readme.md"
homepage = "https://github.com/marc2332/lenar"

[dependencies]
slab = "0.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "parser"
harness = false